--- a/src/main/resources/templates/searchBookPage/bookDetail.html
+++ b/src/main/resources/templates/searchBookPage/bookDetail.html
@@ -93,49 +93,49 @@
           <!-- 0.5 점 -->
           <label class="rating__label rating__label--half" th:for="|starhalf-${review.reviewNo}|">
             <input type="radio" th:id="|starhalf-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="0.5" th:checked="${review.reviewScore == 0.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="0.5" th:checked="${review.reviewScore == 0.5}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 1 점 -->
           <label class="rating__label rating__label--full" th:for="|star1-${review.reviewNo}|">
             <input type="radio" th:id="|star1-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="1" th:checked="${review.reviewScore == 1}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="1" th:checked="${review.reviewScore == 1}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 1.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star1half-${review.reviewNo}|">
             <input type="radio" th:id="|star1half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="1.5" th:checked="${review.reviewScore == 1.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="1.5" th:checked="${review.reviewScore == 1.5}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 2 점 -->
           <label class="rating__label rating__label--full" th:for="|star2-${review.reviewNo}|">
             <input type="radio" th:id="|star2-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="2" th:checked="${review.reviewScore == 2}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="2" th:checked="${review.reviewScore == 2}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 2.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star2half-${review.reviewNo}|">
             <input type="radio" th:id="|star2half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="2.5" th:checked="${review.reviewScore == 2.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="2.5" th:checked="${review.reviewScore == 2.5}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 3 점 -->
           <label class="rating__label rating__label--full" th:for="|star3-${review.reviewNo}|">
             <input type="radio" th:id="|star3-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="3" th:checked="${review.reviewScore == 3}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="3" th:checked="${review.reviewScore == 3}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 3.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star3half-${review.reviewNo}|">
             <input type="radio" th:id="|star3half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="3.5" th:checked="${review.reviewScore == 3.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="3.5" th:checked="${review.reviewScore == 3.5}">
 
             <span class="star-icon"></span>
           </label>
@@ -143,21 +143,21 @@
           <!-- 4 점 -->
           <label class="rating__label rating__label--full" th:for="|star4-${review.reviewNo}|">
             <input type="radio" th:id="|star4-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="4" th:checked="${review.reviewScore == 4}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="4" th:checked="${review.reviewScore == 4}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 4.5 점 -->
           <label class="rating__label rating__label--half" th:for="|star4half-${review.reviewNo}|">
             <input type="radio" th:id="|star4half-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="4.5" th:checked="${review.reviewScore == 4.5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="4.5" th:checked="${review.reviewScore == 4.5}">
             <span class="star-icon"></span>
           </label>
 
           <!-- 5 점 -->
           <label class="rating__label rating__label--full" th:for="|star5-${review.reviewNo}|">
             <input type="radio" th:id="|star5-${review.reviewNo}|" class="rating__input"
-              th:name="|rating-${review.reviewNo}|" value="5" th:checked="${review.reviewScore == 5}" disabled>
+              th:name="|rating-${review.reviewNo}|" value="5" th:checked="${review.reviewScore == 5}">
             <span class="star-icon"></span>
           </label>
         </div>
