--- a/src/main/resources/templates/admin/adminChatting.html
+++ b/src/main/resources/templates/admin/adminChatting.html
@@ -141,19 +141,74 @@
 
 
     </style>
+<script th:inline="javascript">
+  const notificationLoginCheck
+    = /*[[${session.loginMember} ? true : false]]*/ false;
+</script>
 
 <!-- 팝업 창 -->
 <div class="popup" id="popup">
-    <div class="top" id="popupHeader">
-      <div class="popup-header">
-        관리자 채팅방
-      </div>
-      <button id="closePopup">ⅹ</button>
+  <div class="top" id="popupHeader">
+    <div class="popup-header">
+      관리자 채팅방
     </div>
+    <button id="closePopup">ⅹ</button>
+  </div>
+  <button id="addTarget">추가</button>
+
+		<div id="addTargetPopupLayer" class="popup-layer-close">
+			<span id="closeBtn">&times</span>
+
+			<div class="target-input-area">
+				<input type="search" id="targetInput" placeholder="닉네임 또는 이메일을 입력하세요" autocomplete="off">
+			</div>
+
+			<ul id="resultArea">
+<!-- 				<li class="result-row" data-id="1">
+					<img class="result-row-img" src="/images/user.png">
+					<span> <mark>유저</mark>일</span>
+				</li>
+				<li class="result-row"  data-id="2">
+					<img class="result-row-img" src="/images/user.png">
+					<span><mark>유저</mark>이</span>
+				</li>
+
+				<li class="result-row">일치하는 회원이 없습니다</li> -->
+			</ul>
+		</div>
+
+		<div class="chatting-area">
+			<ul class="chatting-list">
+        
+
+				<th:block th:each="room : ${roomList}">
+
+					<!-- th:chat-no : li 태그에 임의의 속성 chat-no를 추가하는데
+						타임리프를 이용해 출력된 값을 chat-no 속성 값으로 대입 -->
+					<li class="chatting-item" th:chat-no="${room.chattingRoomNo}" th:target-no="${room.targetNo}">
+						<div class="item-header">
+
+						</div>
+						<div class="item-body">
+							<p>
+								<span class="target-name" th:text="${room.targetNickname}">상대방 이름</span>
+								<span class="recent-send-time" th:text="${room.sendTime}">메세지 보낸 시간</span>
+							</p>
+							<div>
+								<p class="recent-message" th:text="${room.lastMessage}">메세지 내용</p>
+
+								<p th:if="${room.notReadCount > 0}" class="not-read-count" th:text="${room.notReadCount}"></p>
+							</div>
+						</div>
+					</li>
+
+				</th:block>
+
+    
     <div class="chatting-area">
 			<div class="chatting-content">
 				<ul class="display-chatting">
-					<li class="my-chat">
+					<!-- <li class="my-chat">
 						<span class="chatDate">14:01</span>
 						<p class="chat">가나다라마바사</p>
 					</li>
@@ -169,7 +224,7 @@
 							</p>
 							<span class="chatDate">14:05</span>
 						</div>
-					</li>
+					</li> -->
 				</ul>
 
 				<div class="input-area">
@@ -180,6 +235,13 @@
 		</div>
 </div>
 
+
+<script src="https://cdn.jsdelivr.net/npm/sockjs-client@1/dist/sockjs.min.js"></script>
+<script th:inline="javascript">
+  const userDefaultImage = /*[[#{user.default.image}]]*/ '기본 이미지';
+
+  const loginMemberNo = /*[[${session.loginMember?.memberNo}]]*/ '로그인 회원 번호';
+</script>
 
 <script src="/js/admin/adminChatting.js"></script>
 
