차트 그리기 초안

--- a/src/main/resources/templates/admin/adminMain.html
+++ b/src/main/resources/templates/admin/adminMain.html
@@ -128,8 +128,21 @@
                 <span>클릭 된 버튼 / 기간</span>
               </div>
               <div class="graph-section">
-                <a href="#">그래프 그릴거예여</a>
-
+                 <!-- line Chart -->
+                <div class="col-xl-4 col-lg-5">
+                  <div class="card shadow mb-4">
+                      <!-- Card Header - Dropdown -->
+                      <div class="card-header py-3">
+                          <h6 class="m-0 font-weight-bold text-primary">Memory 사용량</h6>
+                      </div>
+                      <!-- Card Body -->
+                      <div class="card-body">
+                          <div class="chart-pie pt-4">
+                              <canvas id="memoryChart"></canvas>
+                          </div>
+                      </div>
+                  </div>
+                </div>
                
               </div>
             </div>
