--- a/src/main/resources/templates/common/darkModeToggle.html
+++ b/src/main/resources/templates/common/darkModeToggle.html
@@ -42,20 +42,20 @@
 
 
   .btn-bd-primary {
-        --bd-violet-bg: #712cf9;
-        --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+        --bd-violet-bg: #712cf9 !important;; 
+        --bd-violet-rgb: 112.520718, 44.062154, 249.437846 !important;;
 
-        --bs-btn-font-weight: 600;
-        --bs-btn-color: var(--bs-white);
-        --bs-btn-bg: var(--bd-violet-bg);
-        --bs-btn-border-color: var(--bd-violet-bg);
-        --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
-        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-        --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
+        --bs-btn-font-weight: 600 !important;
+        --bs-btn-color: var(--bs-white) !important;
+        --bs-btn-bg: var(--bd-violet-bg) !important;
+        --bs-btn-border-color: var(--bd-violet-bg) !important;
+        --bs-btn-hover-color: var(--bs-white) !important;
+        --bs-btn-hover-bg: #6528e0 !important;
+        --bs-btn-hover-border-color: #6528e0 !important;
+        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb) !important;
+        --bs-btn-active-color: var(--bs-btn-hover-color) !important;
+        --bs-btn-active-bg: #5a23c8 !important;
+        --bs-btn-active-border-color: #5a23c8 !important;
       }
 
       .bd-mode-toggle {
