--- a/src/main/resources/static/css/searchBookPage/bookDetail.css
+++ b/src/main/resources/static/css/searchBookPage/bookDetail.css
@@ -520,30 +520,27 @@ h1 {
 /* 리뷰 작성부분 css 끝 */
 
 /*  별점 Css */
-.star-ratings {
-  color: #aaa9a9; 
+.stars {
+  font-size: 10.5px;
   position: relative;
-  unicode-bidi: bidi-override;
-  width: max-content;
-  -webkit-text-fill-color: transparent; /* Will override color (regardless of order) */
-  -webkit-text-stroke-width: 1.3px;
-  -webkit-text-stroke-color: #2b2a29;
+  width: 75px;
+  height: 20px;
 }
 
-.star-ratings-fill {
-  color: #fff58c;
-  padding: 0;
+.stars-background {
   position: absolute;
-  z-index: 1;
-  display: flex;
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  -webkit-text-fill-color: gold;
+  width: 100%;
+  height: 100%;
+  color: #cdcdcd;
 }
 
-.star-ratings-base {
-  z-index: 0;
-  padding: 0;
+.stars-real {
+  position: absolute;
+  height: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  color: #ffcc00;
+  transition: width 0.3s ease-in-out;
 }
+
 /*  별점 Css */
